--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,31 @@
 /* Custom Font */
 @import url('https://fonts.googleapis.com/css?family=Geo');
 
+/* body {
+    margin:0;
+    padding:10;
+    height:100%;
+} */
+
+body {
+    padding-top: 54px;
+  }
+
+  .business-header {
+    height: 40vh;
+    min-height: 300px;
+    /* background: url('http://placehold.it/1920x400') center center no-repeat scroll; */
+    background-image: url(../media/images/homePage.jpg) !important;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+  }
+  
+  .card {
+    height: 100%;
+  }
+
 .companyName{
     font-family: 'Geo', sans-serif;
 }
@@ -55,6 +80,7 @@
     position:relative;
     height:0;
 }
+
 .responsive-map iframe{
     left:0;
     top:0;
@@ -63,8 +89,20 @@
     position:absolute;
 }
 
+.help-block.with-errors {
+    color: #ff5050;
+    margin-top: 5px;
+}
+
 
 /* Responsive elements for small screens */
+
+@media (min-width: 992px) {
+    body {
+      padding-top: 56px;
+    }
+  }
+  
 @media only screen and (max-width: 480px) {
     .text-white > h5 > span {
         font-size: 100%;
